# sure-evaluation

./: .gitignore  AGENTS.md  ARCHITECTURE.source.md  LICENSE  MANIFEST.in  PLAN.md  README.md  README_ZH.md  RECOMMENDATIONS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  environment_problem.md  metric_request.md  node_contribution.md
.github/workflows/: core.yml
config/: default.yaml
docs/: add_a_metric.md  agent_contract.md  contributing.md  environment.md  installation.md  pipeline_catalog.jsonl  pipeline_catalog.md  pipeline_inputs.md  reproducibility.md
docs/tasks/: README.md  asr.md  classification.md  kws.md  s2tt.md  sa_asr.md  sd.md  se.md  slu.md  tse.md  tts.md  tts_vc.md  vc.md
scripts/: check_execution_surface_compliance.py  convert_sure_to_jsonl.py  download_sure_data.py  evaluate_predictions.py  extract_test_samples.py  generate_pipeline_catalog.py  generate_predictions_via_server.py  generate_report_snapshot.py  materialize_predictions_template.py  prepare_local_test_datasets.py  prepare_sure_dataset.py  refresh_report_snapshot.py  run_kws_metric_pipeline.py  run_se_metric_pipeline.py  run_speech_understanding_metric_pipeline.py  run_sure_evaluation.py  run_tts_metric_pipeline.py  run_tts_metric_pipeline_docker.py  run_tts_metric_pipeline_docker.sh  run_vc_metric_pipeline.py  run_vc_metric_pipeline_docker.py  run_vc_metric_pipeline_docker.sh  validate_functional_alignment.py  validate_prediction_files.py  xforge_collect_dataset.py  xforge_collect_model.py  xforge_daily_modelscope_summary.py  xforge_modelscope_dataset_to_oref.py  xforge_modelscope_fetch.py  xforge_process_to_oref.py  xforge_process_to_sure.py  xforge_watch_modelscope.py
src/sure_eval/: __init__.py  cli.py
src/sure_eval/compat/: __init__.py  deepspeed_stub.py
src/sure_eval/core/: __init__.py  config.py  logging.py
src/sure_eval/evaluation/: README.md  __init__.py  agent_plan.py  audio_runtime.py  audio_samples.py  base.py  cache.py  cli.py  cli_adapters.py  env_check.py  pipeline_identity.py  registry.py  rps.py  sure_evaluator.py
src/sure_eval/evaluation/conversion/: __init__.py
src/sure_eval/evaluation/conversion/sa_asr__cpwer/: README.md  __init__.py  convert.py  manifest.yaml  stm_to_txt.py  txt_to_stm.py
src/sure_eval/evaluation/core/: __init__.py  pipeline.py  types.py
src/sure_eval/evaluation/nodes/: __init__.py
src/sure_eval/evaluation/nodes/common/: README.md  __init__.py  node_local_python.py
src/sure_eval/evaluation/nodes/frontend/: __init__.py
src/sure_eval/evaluation/nodes/normalization/: __init__.py
src/sure_eval/evaluation/nodes/scoring/: __init__.py  _audio_quality.py  _audio_quality_dispatch.py  _full_reference_audio.py
src/sure_eval/evaluation/nodes/scoring/bleurt_20/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/scoring/dnsmos/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/scoring/ecapa_tdnn_sim/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/scoring/eres2net_sim/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/scoring/utmos/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/scoring/wavlm_large_sim/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/transcription/: __init__.py
src/sure_eval/evaluation/nodes/transcription/paraformer_zh/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/nodes/transcription/whisper_large_v3/: README.md  __init__.py  manifest.yaml  node.py  node_env.yaml  pyproject.toml
src/sure_eval/evaluation/scripts/: __init__.py  asr.py  classification.py  contracts.py  kws.py  run.py  s2tt.py  sa_asr.py  sd.py  se.py  slu.py  tse.py  tts.py  vc.py
src/sure_eval/evaluation/tasks/: __init__.py
src/sure_eval/evaluation/tasks/asr/: README.md  __init__.py  manifest.yaml  metrics.py  pipeline.py  routes.yaml
src/sure_eval/evaluation/tasks/classification/: README.md  __init__.py  manifest.yaml  metrics.py  pipeline.py  routes.yaml
src/sure_eval/evaluation/tasks/kws/: README.md  __init__.py  compat.py  loaders.py  (+3 more)
src/sure_eval/reports/: __init__.py  report_manager.py  sota_manager.py
src/sure_eval/reports/sota/: sota_baseline.yaml
tests/: conftest.py  test_agent_plan.py  test_asr_canonical_route.py  test_asr_mer_canonical.py  test_asr_pipeline_nodes.py  test_asr_scoring_coverage.py  test_audio_samples_cli_inputs.py  test_classification_pipeline_nodes.py  test_core_logging.py  test_evaluation_architecture_contracts.py  test_evaluation_cli.py  test_evaluation_conversion.py  test_evaluation_env_check.py  test_evaluation_scripts_contracts.py  test_evaluation_task_modules.py  test_evaluator_metrics.py  test_kws_metrics.py  test_kws_pipeline_nodes.py  test_pipeline_catalog_identity.py  test_pipeline_identity.py  test_punctuation_strip_normalization_node.py  test_rps_manager.py  test_s2tt_pipeline_nodes.py  test_sctk_sclite_scoring_node.py  test_se_metric_runners.py  test_se_pipeline_nodes.py  test_si_sdr_scoring_node.py  test_tse_pipeline.py  test_tse_samples_jsonl.py  test_tse_scripts.py  test_tts_metric_runners.py  test_tts_pipeline_nodes.py  test_tts_vc_audio_metric_nodes.py  test_vc_metric_runners.py  test_vc_pipeline_nodes.py  test_wetext_normalization_node.py  test_whisper_normalization_node.py
tests/fixtures/CoVoST2/: manifest.json
tests/fixtures/SD/: manifest.json
tests/fixtures/aishell1-test/: manifest.json
tests/fixtures/cli/: asr_input.jsonl
tests/fixtures/kespeech/: manifest.json
tests/fixtures/librispeech/: manifest.json
tests/fixtures/mmsu/: manifest.json
tests/fixtures/shared/mir/: rhythm_22k_15s.json
tests/fixtures/shared/se/: manifest.json  noisy_48k.txt
tests/fixtures/shared/speaker_verification/: manifest.json
(+170 files in other folders)
