[project]
name = "sure-eval-scoring-dnsmos"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "librosa==0.10.2",
    "numpy==1.26.4",
    "onnxruntime>=1.17.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "scipy==1.15.3",
    "soundfile==0.12.1",
    "structlog>=23.0.0",
]

[tool.uv]
package = false
