[project]
name = "sure-eval-scoring-ecapa-tdnn-sim"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "huggingface-hub==0.35.3",
    "hyperpyyaml>=1.2.2",
    "librosa==0.10.2",
    "numpy==1.26.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "scipy==1.15.3",
    "soundfile==0.12.1",
    "speechbrain==1.0.3",
    "structlog>=23.0.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
]

[tool.uv]
package = false
