[project]
name = "sure-eval-scoring-wavlm-large-sim"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate==1.11.0",
    "huggingface-hub==0.35.3",
    "librosa==0.10.2",
    "numpy==1.26.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "safetensors==0.6.2",
    "soundfile==0.12.1",
    "structlog>=23.0.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers==4.51.3",
]

[tool.uv]
package = false
