[project]
name = "sure-eval-transcription-paraformer-zh"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "funasr>=1.2.0",
    "modelscope>=1.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
]

[tool.uv]
package = false
