[project]
name = "sure-eval-transcription-whisper-large-v3"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.33.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "safetensors>=0.4.0",
    "structlog>=23.0.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "transformers>=4.52.0",
]

[tool.uv]
package = false
